--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -33,29 +33,29 @@ jobs:
         apt-get update
         apt-get install -y \
           lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat \
-          python3 python3-pip python3-venv gcovr bc pipx wget \
+          python3 python3-pip python3-venv gcov gcovr bc pipx wget \
           software-properties-common
-        # Add the official LLVM repository and install Clang 19
-        wget https://apt.llvm.org/llvm.sh
-        chmod +x llvm.sh
-        ./llvm.sh 19
-        apt-get install -y clang-19 libclang-19-dev python3-clang-19
-        apt-get remove -y libclang-14-dev libclang-common-14-dev libclang1-14 libllvm14 python3-clang-14
-        # Ensure Clang 19 is the default
-        update-alternatives --install /usr/bin/clang clang /usr/lib/llvm-19/bin/clang 100
-        update-alternatives --install /usr/bin/clang++ clang++ /usr/lib/llvm-19/bin/clang++ 100
-        pipx install --system-site-packages mcdc-checker
-        pipx ensurepath
-    - name: Verify Clang Installation
-      run: |
-        echo "Checking clang binary..."
-        which clang || { echo "clang not found in PATH"; exit 1; }
-        echo "clang version:"
-        clang --version
-    - name: Verify Clang Python Bindings
-      run: |
-        echo "Testing Clang Python bindings..."
-        python3 -c "import clang.cindex; print('Clang bindings are working')"
+    #     # Add the official LLVM repository and install Clang 19
+    #     wget https://apt.llvm.org/llvm.sh
+    #     chmod +x llvm.sh
+    #     ./llvm.sh 19
+    #     apt-get install -y clang-19 libclang-19-dev python3-clang-19
+    #     apt-get remove -y libclang-14-dev libclang-common-14-dev libclang1-14 libllvm14 python3-clang-14
+    #     # Ensure Clang 19 is the default
+    #     update-alternatives --install /usr/bin/clang clang /usr/lib/llvm-19/bin/clang 100
+    #     update-alternatives --install /usr/bin/clang++ clang++ /usr/lib/llvm-19/bin/clang++ 100
+    #     pipx install --system-site-packages mcdc-checker
+    #     pipx ensurepath
+    # - name: Verify Clang Installation
+    #   run: |
+    #     echo "Checking clang binary..."
+    #     which clang || { echo "clang not found in PATH"; exit 1; }
+    #     echo "clang version:"
+    #     clang --version
+    # - name: Verify Clang Python Bindings
+    #   run: |
+    #     echo "Testing Clang Python bindings..."
+    #     python3 -c "import clang.cindex; print('Clang bindings are working')"
     - name: Build with Coverage Flags
       run: |
         export CFLAGS="-fprofile-arcs -ftest-coverage -fcondition-coverage -g"
